K8s-Exercises/task_06_Helm/podinfo_project/podinfo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: podinfo-app
  name: podinfo-app
  namespace: demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: podinfo-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - image: ghcr.io/stefanprodan/podinfo
        name: podinfo
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
        readinessProbe: {}
        livelinessProbe: {}
        resources: {}
status: {}
