K8s-Exercises/task_06_Helm/podinfo_project/podinfo-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: podinfo-app
  name: podinfo-app
  namespace: demo
spec:
  ports:
  - port: 9898
    protocol: TCP
    targetPort: 9898
  selector:
    app: podinfo-app
status:
  loadBalancer: {}
